objects/Property_Insurance__c.object
<CustomObject>
    <fields>
        <fullName>AfterExpiredDays__c</fullName>
        <formula>Today()-DWH_Propert_Ins_Exp_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AfterExpiredDays</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assign_To_Me__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign To Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_To_Servicing_TL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign To Servicing TL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignedToLoggedIn__c</fullName>
        <formula>IF(OwnerId ==  $User.Id ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssignedToLoggedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <formula>IF( Owner:Queue.QueueName != &apos;&apos;,Owner:Queue.QueueName, Owner:User.FirstName &amp; &apos; &apos;&amp; Owner:User.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COC_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable (Discharged)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cease_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cease Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Close Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Property Insurance Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete - Borrower contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded To Customer enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd attempt no response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWH_Instance__c</fullName>
        <label>DWH: Instance</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Propert_Ins_Exp_Date__c</fullName>
        <label>Security Insurance Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DWH_Source_System__c</fullName>
        <label>DWH: Source System</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day7Letter_Date_Time__c</fullName>
        <label>Day7Letter(Date/Time)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Details_Sent_To_ESB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Details(COC Data) sent to Jackson if box is ticked.</inlineHelpText>
        <label>Insurance Details sent to Jackson?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Letter_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Letter To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_SMS_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable SMS To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Task_Assignment_To_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Task Assignment To Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Don_t_Send_To_Jackson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Send To Jackson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESB_API_Success_Error_Message__c</fullName>
        <label>Message returned from Jackson</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiry_Date_Time__c</fullName>
        <label>Expiry Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Financed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_API_Log__c</fullName>
        <label>Insurance API Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Premium__c</fullName>
        <label>Insurance Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_Description__c</fullName>
        <label>Insurance Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurer_Short_Name__c</fullName>
        <label>Insurer Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Letter_Send_Pending_Holiday_7_days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Letter Send Pending(Holiday) 7 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SMS_Send_Pending_Holiday_14_days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SMS Send Pending (Holiday) 14 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SMS_Send_Pending_Holiday_1_day_exp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SMS Send Pending (Holiday) 1 day exp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name__c</fullName>
        <label>Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Generation_API_Log__c</fullName>
        <label>Letter Generation API Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Generation_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter Generation Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letter_Generation_Success_Error_Message__c</fullName>
        <label>Letter Generation(Success/Error) Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Letter_Sent_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>7 day Pre Expiry Letter sent to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Surrogate__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_visible_in_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make visible in Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mortgage_Funding__c</fullName>
        <formula>Property__r.CL_Contract__r.ScCollection_Mortgage_Funding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mortgage Funding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MotgageFunding__c</fullName>
        <label>MotgageFunding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Applicable_for_COC_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Applicable for COC Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginatorID__c</fullName>
        <label>OriginatorID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginatorShortName__c</fullName>
        <label>OriginatorShortName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Id__c</fullName>
        <formula>Property__r.CL_Contract__r.ScCollection_Originator_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originator Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Short_Name__c</fullName>
        <formula>Property__r.CL_Contract__r.ScCollection_Originator_Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originator Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Amount_Insured__c</fullName>
        <label>Security Amount Insured</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_External_ID__c</fullName>
        <label>Security External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Ins_Policy_No__c</fullName>
        <label>Security Insurance Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Insurance_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Security Insurance External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Insurer_External_ID__c</fullName>
        <label>Security Insurer External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Insurer_Name__c</fullName>
        <formula>IF(NOT(ISBLANK( Property_Insurer__r.Name__c )),Property_Insurer__r.Name__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security Insurer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Insurer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Security Insurer</label>
        <referenceTo>Property_Insurer__c</referenceTo>
        <relationshipName>PropertyInsurances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Replace_Sq_Mtrs__c</fullName>
        <label>Security Replace Sq Mtrs</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Security Number</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>PropertyInsurances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Liability_Cover__c</fullName>
        <label>Public Liability Cover</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReinitiateTimedependentActions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReinitiateTimedependentActions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Entity__c</fullName>
        <label>Risk Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_1_Day_Post_Expiry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS 1 Day Post Expiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Before_14_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Before 14 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Property_Address__c</fullName>
        <label>Security Property Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SendInsuranceDetailsToJackson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendInsuranceDetailsToJackson</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendLetter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendLetter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <formula>IF(Property__r.CL_Contract__r.collect__Account__r.IsPersonAccount, 
Property__r.CL_Contract__r.collect__Account__r.PersonContact.FirstName &amp; &apos; &apos; &amp; Property__r.CL_Contract__r.collect__Account__r.PersonContact.LastName, 
Property__r.CL_Contract__r.collect__Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COC Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_To_Call_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task To Call Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TobeexpiredDays__c</fullName>
        <formula>DWH_Propert_Ins_Exp_Date__c-Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TobeexpiredDays</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Security Insurance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Short_Name__c</columns>
        <columns>DWH_Propert_Ins_Exp_Date__c</columns>
        <columns>Security_Property_Address__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>SMS_Before_14_Days__c</columns>
        <columns>Letter_Generation_Submitted__c</columns>
        <columns>SMS_1_Day_Post_Expiry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AssignedToLoggedIn__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Assigned To Me</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Mobile_Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mobile_Phone__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Sydney_Queue</fullName>
        <booleanFilter>(1 AND 2 AND 3 AND 4 AND 5) OR (1 AND 2 AND 3 AND 4 AND 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>Loan_Surrogate__c</columns>
        <columns>DWH_Propert_Ins_Exp_Date__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Security_Property_Address__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Letter_Generation_Submitted__c</columns>
        <columns>SMS_Before_14_Days__c</columns>
        <columns>SMS_1_Day_Post_Expiry__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>contains</operation>
            <value>Sydney</value>
        </filters>
        <filters>
            <field>Not_Applicable_for_COC_Process__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>DWH_Propert_Ins_Exp_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>8/1/2017</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>AfterExpiredDays__c</field>
            <operation>greaterThan</operation>
            <value>7</value>
        </filters>
        <filters>
            <field>TobeexpiredDays__c</field>
            <operation>lessOrEqual</operation>
            <value>14</value>
        </filters>
        <label>Sydney Queue</label>
        <queue>Sydney_Queue</queue>
        <sharedTo>
            <group>COC_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unallocated</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Loan_Surrogate__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>DWH_Propert_Ins_Exp_Date__c</columns>
        <columns>Security_Property_Address__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Letter_Generation_Submitted__c</columns>
        <columns>SMS_Before_14_Days__c</columns>
        <columns>SMS_1_Day_Post_Expiry__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Unallocated</value>
        </filters>
        <filters>
            <field>Not_Applicable_for_COC_Process__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>DWH_Propert_Ins_Exp_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>8/1/2017</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>OriginatorShortName__c</field>
            <operation>notContain</operation>
            <value>HOMELOANS LIMIT</value>
        </filters>
        <label>Unallocated</label>
        <queue>UnAllocated_Insurance</queue>
        <sharedTo>
            <group>COC_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Security Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Insurances</pluralLabel>
    <recordTypes>
        <fullName>Mortgage_Insurance</fullName>
        <active>true</active>
        <label>Mortgage</label>
    </recordTypes>
    <recordTypes>
        <fullName>PAF_Insurance</fullName>
        <active>true</active>
        <label>PAF</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Close_Reason_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISPICKVAL(Status__c,&apos;Closed&apos;),Source_Name__c=&apos;MORTGAGE&apos;, ISPICKVAL(Close_Reason__c,&apos;&apos;)),true,false)</errorConditionFormula>
        <errorMessage>Close reason is necessary   for closing the Property Insurance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Update_Before_Assignment</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(AssignedToLoggedIn__c == false,ISPICKVAL(Status__c,&apos;Closed&apos;),Source_Name__c=&apos;MORTGAGE&apos;, $Profile.Name !=&apos;System Administrator&apos;, $Profile.Name !=&apos;System Admin Integration&apos;),true,false)</errorConditionFormula>
        <errorMessage>Each Property Insurance record must be assigned to an agent before updating. Please assign to yourself and try again.</errorMessage>
    </validationRules>
</CustomObject>